搜索页基本界面
ADD 搜索页基本界面

--- a/OpenCode/Base.lproj/Main.storyboard
+++ b/OpenCode/Base.lproj/Main.storyboard
@@ -369,7 +369,7 @@
                             <tableViewSection id="V6K-YV-OSJ">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="Ym5-02-tJU" imageView="515-9O-cFw" style="IBUITableViewCellStyleDefault" id="kkR-Xg-PgN">
-                                        <rect key="frame" x="0.0" y="35" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kkR-Xg-PgN" id="Vgh-Kg-PSe">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -390,7 +390,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" textLabel="nP2-dC-ZWD" style="IBUITableViewCellStyleDefault" id="dFY-uQ-tdv">
-                                        <rect key="frame" x="0.0" y="79" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="143" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dFY-uQ-tdv" id="TME-Rs-DzC">
                                             <rect key="frame" x="0.0" y="0.0" width="281" height="43"/>
@@ -407,7 +407,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" textLabel="9xr-ie-bNn" style="IBUITableViewCellStyleDefault" id="nqz-KJ-wLs">
-                                        <rect key="frame" x="0.0" y="123" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="187" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nqz-KJ-wLs" id="OIL-1s-bvN">
                                             <rect key="frame" x="0.0" y="0.0" width="281" height="43"/>
@@ -424,7 +424,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="iZx-Nq-Jyj" style="IBUITableViewCellStyleDefault" id="frV-Cd-THv">
-                                        <rect key="frame" x="0.0" y="167" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="231" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="frV-Cd-THv" id="Axu-Oj-HqS">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -445,7 +445,7 @@
                             <tableViewSection id="pMu-ex-AGZ">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Hnz-A3-zIF" style="IBUITableViewCellStyleDefault" id="9Pr-kZ-BiL">
-                                        <rect key="frame" x="0.0" y="231" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="295" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9Pr-kZ-BiL" id="nD2-EZ-IdJ">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -466,7 +466,7 @@
                             <tableViewSection id="2Jm-Ch-D2M">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="Fza-N7-Wpv" style="IBUITableViewCellStyleDefault" id="gjH-vw-ma2">
-                                        <rect key="frame" x="0.0" y="295" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="359" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gjH-vw-ma2" id="jU8-pZ-Xeu">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -486,7 +486,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="lKN-vx-Hq6" style="IBUITableViewCellStyleDefault" id="MtR-sD-IaF">
-                                        <rect key="frame" x="0.0" y="339" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="403" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MtR-sD-IaF" id="zB8-H4-u1N">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -532,7 +532,7 @@
                             <tableViewSection id="haG-tt-lFy">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="QFW-Wm-UIw">
-                                        <rect key="frame" x="0.0" y="113" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="177" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="QFW-Wm-UIw" id="9Qz-gB-qRj">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -540,7 +540,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="jfg-Lt-AD0">
-                                        <rect key="frame" x="0.0" y="157" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="221" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jfg-Lt-AD0" id="nNl-sg-VTi">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -548,7 +548,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="h2Y-ic-Hgn">
-                                        <rect key="frame" x="0.0" y="201" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="265" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="h2Y-ic-Hgn" id="eJi-pD-ERO">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
@@ -581,8 +581,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="Io1-WM-Rqv" kind="relationship" relationship="viewControllers" id="xDV-QT-zgF"/>
-                        <segue destination="lVf-O0-qcw" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
+                        <segue destination="B2B-tx-69E" kind="relationship" relationship="viewControllers" id="d3Q-MT-yu1"/>
                         <segue destination="Nbg-TI-RyH" kind="relationship" relationship="viewControllers" id="gya-iq-nod"/>
+                        <segue destination="lVf-O0-qcw" kind="relationship" relationship="viewControllers" id="lzU-1b-eKA"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -607,6 +608,38 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="swh-7v-KUG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="400" y="340.80000000000001"/>
+        </scene>
+        <!--搜索-->
+        <scene sceneID="Pm3-KM-v6r">
+            <objects>
+                <viewController id="feO-Xz-Gub" customClass="SearchController" customModule="OpenCode" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MGA-3I-mn7">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="搜索" id="CmL-0p-scB"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n9e-5D-YPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="833" y="-1008"/>
+        </scene>
+        <!--搜索-->
+        <scene sceneID="aDF-Mb-Jaq">
+            <objects>
+                <navigationController id="B2B-tx-69E" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="搜索" image="Search" id="2fe-hd-7Of"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Uzo-d5-FgY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="feO-Xz-Gub" kind="relationship" relationship="rootViewController" id="Kpi-d3-u8a"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xsw-vV-1fa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="400" y="-1008"/>
         </scene>
         <!--事件-->
         <scene sceneID="c1v-Gv-cNK">
@@ -682,6 +715,7 @@
     <resources>
         <image name="My" width="24" height="24"/>
         <image name="News" width="24" height="24"/>
+        <image name="Search" width="24" height="24"/>
         <image name="Tools" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
