--- a/OpenCode/Classes/News/View/NewsEventCell.xib
+++ b/OpenCode/Classes/News/View/NewsEventCell.xib
@@ -17,23 +17,30 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BcZ-Sl-sjG">
                         <rect key="frame" x="28" y="8" width="20" height="20"/>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="My" translatesAutoresizingMaskIntoConstraints="NO" id="7Ud-HW-YuQ">
+                        <rect key="frame" x="8" y="36" width="44" height="44"/>
+                    </imageView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGr-BR-ftH">
+                        <rect key="frame" x="56" y="26" width="231" height="65"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <string key="text">adsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasdaadsdasdasda</string>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="一个月前" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eja-GK-QQH">
-                        <rect key="frame" x="56" y="8" width="187" height="20"/>
+                        <rect key="frame" x="63" y="8" width="187" height="20"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="My" translatesAutoresizingMaskIntoConstraints="NO" id="7Ud-HW-YuQ">
-                        <rect key="frame" x="8" y="36" width="44" height="44"/>
-                    </imageView>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" delaysContentTouches="NO" canCancelContentTouches="NO" bouncesZoom="NO" editable="NO" text="描述描述描述描述描述描述描述描述描述" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGr-BR-ftH">
-                        <rect key="frame" x="56" y="31" width="231" height="49"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                    </textView>
                 </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="dateLabel" destination="eja-GK-QQH" id="uiG-5W-Zf5"/>
+                <outlet property="descText" destination="gGr-BR-ftH" id="suM-Od-gsm"/>
+                <outlet property="eventImage" destination="BcZ-Sl-sjG" id="TLp-AO-QFO"/>
+                <outlet property="userAvatarImage" destination="7Ud-HW-YuQ" id="fsy-VB-7gN"/>
+            </connections>
             <point key="canvasLocation" x="299" y="321"/>
         </tableViewCell>
     </objects>
