--- a/OpenCode/Classes/Search/View/SearchRepoCell.xib
+++ b/OpenCode/Classes/Search/View/SearchRepoCell.xib
@@ -50,6 +50,10 @@
                         <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m8j-yl-h22" userLabel="Line">
+                        <rect key="frame" x="6" y="32" width="2" height="57"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    </view>
                 </subviews>
             </tableViewCellContentView>
             <connections>
